# TrainingSession

./: CMakeLists.txt  CMakePresets.json  README.md
TrainingSession/: CMakeLists.txt  TrainingSession.cpp  TrainingSession.h  Two.cpp  Two.h  commonHeaders.h  tutorialOne.cpp  tutorialOne.h
